fix: 修改界面文字 - 一个显示多单一个显示空单

--- a/templates/anchor_system_real.html
+++ b/templates/anchor_system_real.html
@@ -889,7 +889,7 @@
                         </label>
                         <label style="font-size: 13px; color: white; display: flex; align-items: center; cursor: pointer; user-select: none; opacity: 0.9;">
                             <input type="checkbox" id="followLongLoss" style="margin-right: 5px; cursor: pointer; width: 16px; height: 16px;">
-                            <span>📊 跟空单亏损开单</span>
+                            <span>📊 跟多单亏损开单</span>
                         </label>
                         <label style="font-size: 13px; color: white; display: flex; align-items: center; cursor: pointer; user-select: none; opacity: 0.9;">
                             <input type="checkbox" id="subSuperMaintainLong" style="margin-right: 5px; cursor: pointer; width: 16px; height: 16px;">
